Added Recycler View for Main page to show popular coind

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,49 +8,19 @@
     android:padding="8dp"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_loadCoinList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="All Coins"
+        android:text="Refresh"
         android:textSize="24sp"
         android:textStyle="bold" />
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_weight="1">-->
-
-        <ListView
-            android:id="@+id/lv_Coins"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="20sp" />
-
-<!--    </ScrollView>-->
-
-
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCoinList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Coin Info"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/tv_Coin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp" />
-
-    </ScrollView>
 
 </LinearLayout>
